# data-indo-alpaca

./: .env.example  .gitignore  README.md  generate.sh  generate_data.py  pyproject.toml
